src/main/java/com/example/springsecurityregistration/web/error/UserAlreadyExistException.java
package com.example.springsecurityregistration.web.error;

public class UserAlreadyExistException extends RuntimeException {

    public UserAlreadyExistException(String message) {
        super(message);
    }

}
